--- a/CNN_PINN.ipynb
+++ b/CNN_PINN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "id": "de805878",
       "metadata": {
         "id": "de805878"
@@ -36,7 +36,8 @@
         "import io\n",
         "import os\n",
         "import requests\n",
-        "import zipfile"
+        "import zipfile\n",
+        "import pickle"
       ]
     },
     {
@@ -51,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 17,
       "id": "4612e727",
       "metadata": {
         "id": "4612e727"
@@ -62,6 +63,8 @@
         "    if not os.path.exists(save_dir):\n",
         "        os.makedirs(save_dir)\n",
         "    return save_dir\n",
+        "\n",
+        "download_data()\n",
         "\n",
         "def process_siat_llmd(data_dir, output_file='siat_llmd_processed.pkl'):\n",
         "    from scipy.io import loadmat\n",
@@ -102,14 +105,16 @@
         "        pickle.dump(processed_data, f)\n",
         "    return output_file\n",
         "\n",
-        "    def load_siat_llmd(file_path):\n",
+        "def load_siat_llmd(file_path):\n",
         "\n",
-        "      with open(file_path, 'rb') as f:\n",
-        "        data = pickle.load(f)\n",
+        "    with open(file_path, 'rb') as f:\n",
+        "      data = pickle.load(f)\n",
         "\n",
         "    # Concatenate all trials\n",
         "    emg_signals = np.concatenate([d['emg'] for d in data], axis=1)\n",
         "    joint_angles = np.concatenate([d['angles'] for d in data], axis=1)\n",
+        "\n",
+        "\n",
         "\n",
         "    return emg_signals, joint_angles"
       ]
@@ -129,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "8cacd56f",
       "metadata": {
         "id": "8cacd56f"
@@ -250,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "c8f9925c",
       "metadata": {
         "id": "c8f9925c"
@@ -300,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "id": "7dfa01c7",
       "metadata": {
         "id": "7dfa01c7"
@@ -308,7 +313,7 @@
       "outputs": [],
       "source": [
         "def prepare_dataset(file_path, ordered_channels, test_size=0.25):\n",
-        "    emg_data, labels = process_siat_llmd(file_path)\n",
+        "    emg_data, labels = load_siat_llmd(file_path)\n",
         "\n",
         "    if ordered_channels:\n",
         "        emg_data = channel_rearrangement(emg_data, ordered_channels)\n",
@@ -382,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "id": "767202ee",
       "metadata": {
         "id": "767202ee"
@@ -450,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "id": "8214a331",
       "metadata": {
         "id": "8214a331"
@@ -485,12 +490,13 @@
         "id": "bb136450"
       },
       "source": [
-        "This makes the model a true PINN (Physics-Informed Neural Network). Given that the region of interest regarding the ideal boundary conditions is the lower-limb joints (ankle, knee), we can use an ODE to model the physical constraints. One ODE in many other simulation based models is damper-driven oscillation (represented in residual in the code). This will be incorporated into the loss function later."
+        "This makes the model a true PINN (Physics-Informed Neural Network). Given that the region of interest regarding the ideal boundary conditions is the lower-limb joints (ankle, knee), we can use an ODE to model the physical constraints. One ODE in many other simulation based models (such as OpenSim)\n",
+        "is damper-driven oscillation (represented in residual in the code). This will be incorporated into the loss function later."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "id": "68b0a1b1",
       "metadata": {
         "id": "68b0a1b1"
@@ -593,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 9,
       "id": "8d658f58",
       "metadata": {
         "id": "8d658f58"
@@ -675,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "id": "cff62d58",
       "metadata": {
         "colab": {
@@ -683,7 +689,7 @@
           "height": 339
         },
         "id": "cff62d58",
-        "outputId": "6f4d0916-d33f-4d7d-8641-74c246cb6f15"
+        "outputId": "81e2a231-8e3c-41ce-eaac-4363c3a4608f"
       },
       "outputs": [
         {
@@ -700,10 +706,10 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-f6bfc5af66fe>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0memg_data_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"emg_gait_data.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mordered_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mtrained_cnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memg_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-18-f6bfc5af66fe>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(emg_data_file, ordered_channels)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Using device: {device}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     train_emg, train_labels, valid_emg, valid_labels, test_emg, test_labels = prepare_dataset(\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0memg_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     )\n",
-            "\u001b[0;32m<ipython-input-17-a90e69456bb6>\u001b[0m in \u001b[0;36mprepare_dataset\u001b[0;34m(file_path, ordered_channels, test_size)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_siat_llmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0memg_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchannel_rearrangement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-4-403e491c5010>\u001b[0m in \u001b[0;36mprocess_siat_llmd\u001b[0;34m(data_dir, output_file)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mjoint_angle_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'hip_flexion'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'knee_angle'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ankle_angle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0msubject_dir\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0msubject_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubject_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubject_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-19-f6bfc5af66fe>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0memg_data_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"emg_gait_data.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mordered_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mtrained_cnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memg_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-19-f6bfc5af66fe>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(emg_data_file, ordered_channels)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Using device: {device}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     train_emg, train_labels, valid_emg, valid_labels, test_emg, test_labels = prepare_dataset(\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0memg_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     )\n",
+            "\u001b[0;32m<ipython-input-18-c444231178c9>\u001b[0m in \u001b[0;36mprepare_dataset\u001b[0;34m(file_path, ordered_channels, test_size)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_siat_llmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0memg_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchannel_rearrangement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-17-82759d369f09>\u001b[0m in \u001b[0;36mload_siat_llmd\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_siat_llmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m       \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'emg_gait_data.csv'"
           ]
         }
