--- a/CNN_PINN.ipynb
+++ b/CNN_PINN.ipynb
@@ -52,71 +52,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 40,
       "id": "4612e727",
       "metadata": {
         "id": "4612e727"
       },
       "outputs": [],
       "source": [
-        "def download_data(save_dir = './data/SIAT-LLMD'):\n",
-        "    if not os.path.exists(save_dir):\n",
-        "        os.makedirs(save_dir)\n",
-        "    return save_dir\n",
+        "def load_txt_files(file_paths):\n",
+        "    \"\"\"Load EMG data from multiple .txt log files\"\"\"\n",
+        "    emg_data_list = []\n",
+        "    joint_angles_list = []\n",
         "\n",
-        "download_data()\n",
+        "    for file_path in file_paths:\n",
+        "        try:\n",
+        "            with open(file_path, 'r') as f:\n",
+        "                lines = f.readlines()\n",
         "\n",
-        "def process_siat_llmd(data_dir, output_file='siat_llmd_processed.pkl'):\n",
-        "    from scipy.io import loadmat\n",
+        "            emg_channels = []\n",
+        "            angles = []\n",
         "\n",
-        "    processed_data = []\n",
-        "    emg_channels = ['LTA', 'LMG', 'LPL', 'LBF', 'LST', 'LVM', 'LVI', 'LRA', 'LFE']\n",
-        "    joint_angle_cols = ['hip_flexion', 'knee_angle', 'ankle_angle']\n",
+        "            for line in lines:\n",
+        "                if line.strip() and not line.startswith('#'):\\\n",
+        "                  values = [float(val) for val in line.strip().split(',')]\n",
+        "                if len(values) >= 12:\n",
+        "                        emg_channels.append(values[:9])  # First 9 values are EMG\n",
+        "                        angles.append(values[9:12])  # Next 3 values are joint angles\n",
         "\n",
-        "    for subject_dir in os.listdir(data_dir):\n",
-        "        subject_path = os.path.join(data_dir, subject_dir)\n",
-        "        if not os.path.isdir(subject_path):\n",
-        "            continue\n",
+        "            if emg_channels and angles:\n",
+        "                # Convert to numpy arrays and transpose to get (channels, samples)\n",
+        "                emg_data = np.array(emg_channels).T\n",
+        "                joint_angles = np.array(angles).T\n",
         "\n",
-        "        for trial_file in os.listdir(subject_path):\n",
-        "            if not trial_file.endswith('.mat'):\n",
-        "                continue\n",
+        "                emg_data_list.append(emg_data)\n",
+        "                joint_angles_list.append(joint_angles)\n",
+        "                print(f\"Successfully loaded data from {file_path}\")\n",
+        "            else:\n",
+        "                print(f\"No valid data found in {file_path}\")\n",
         "\n",
-        "            data = loadmat(os.path.join(subject_path, trial_file))\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error loading {file_path}: {e}\")\n",
         "\n",
+        "    if not emg_data_list:\n",
+        "        raise ValueError(\"No data could be loaded from the provided files\")\n",
         "\n",
-        "            emg_raw = data['emg_data'][:, :9].T\n",
-        "            emg_down = signal.resample(emg_raw, int(emg_raw.shape[1]/8), axis=1)\n",
+        "    # Concatenate data from all files\n",
+        "    all_emg = np.concatenate(emg_data_list, axis=1)\n",
+        "    all_angles = np.concatenate(joint_angles_list, axis=1)\n",
         "\n",
-        "            # Extract joint angles (100Hz) and interpolate to 125Hz\n",
-        "            angles = data['joint_angles'][:, :3]  # (n_samples, 3)\n",
-        "            angles_interp = signal.resample(angles, emg_down.shape[1], axis=0)\n",
+        "    return all_emg, all_angles\n",
         "\n",
-        "            # Time alignment\n",
-        "            processed_data.append({\n",
-        "                'emg': emg_down,\n",
-        "                'angles': angles_interp.T,  # (3, n_samples)\n",
-        "                'subject': int(subject_dir.split('_')[-1]),\n",
-        "                'movement': trial_file.split('_')[0]\n",
-        "            })\n",
-        "\n",
-        "    # Save processed data\n",
-        "    with open(output_file, 'wb') as f:\n",
-        "        pickle.dump(processed_data, f)\n",
-        "    return output_file\n",
-        "\n",
-        "def load_siat_llmd(file_path):\n",
-        "\n",
-        "    with open(file_path, 'rb') as f:\n",
-        "      data = pickle.load(f)\n",
-        "\n",
-        "    # Concatenate all trials\n",
-        "    emg_signals = np.concatenate([d['emg'] for d in data], axis=1)\n",
-        "    joint_angles = np.concatenate([d['angles'] for d in data], axis=1)\n",
-        "\n",
-        "\n",
-        "\n",
-        "    return emg_signals, joint_angles"
+        "def find_log_files(directory='.'):\n",
+        "    \"\"\"Find all .log files in the specified directory\"\"\"\n",
+        "    log_files = [f for f in os.listdir(directory) if f.endswith('.log')]\n",
+        "    return [os.path.join(directory, f) for f in log_files]"
       ]
     },
     {
@@ -273,17 +262,6 @@
         "        i += w_shift\n",
         "\n",
         "    return segments\n",
-        "\n",
-        "#is each segment a cycle of voluntary muscle contraction? -> solve\n",
-        "def MVC_normalization(signal_data):\n",
-        "    MVC = []\n",
-        "    for i in segments:\n",
-        "        entry = max(segments[i])\n",
-        "        MVC += entry\n",
-        "\n",
-        "    processed_signal = (MVC)\n",
-        "\n",
-        "\n",
         "\n",
         "def channel_rearrangement(signal_data, channel_order):\n",
         "    channel_order = [channel - 1 for channel in channel_order]\n",
@@ -680,49 +658,54 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "4a70312e",
+      "metadata": {
+        "id": "4a70312e"
+      },
+      "source": [
+        "Define main function to batch the preprocessed data, and define an object of the CNN followed by its training and evaluation. Execute main function."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 42,
       "id": "cff62d58",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 339
+          "height": 106
         },
         "id": "cff62d58",
-        "outputId": "81e2a231-8e3c-41ce-eaac-4363c3a4608f"
+        "outputId": "ee261d87-80f4-45c7-cee3-866015fa2c56"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using device: cpu\n"
-          ]
-        },
-        {
           "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'emg_gait_data.csv'",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-42-6c2f3182c8e1>, line 15)",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-f6bfc5af66fe>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0memg_data_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"emg_gait_data.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mordered_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mtrained_cnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memg_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-19-f6bfc5af66fe>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(emg_data_file, ordered_channels)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Using device: {device}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     train_emg, train_labels, valid_emg, valid_labels, test_emg, test_labels = prepare_dataset(\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0memg_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     )\n",
-            "\u001b[0;32m<ipython-input-18-c444231178c9>\u001b[0m in \u001b[0;36mprepare_dataset\u001b[0;34m(file_path, ordered_channels, test_size)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_siat_llmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0memg_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchannel_rearrangement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-17-82759d369f09>\u001b[0m in \u001b[0;36mload_siat_llmd\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_siat_llmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m       \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'emg_gait_data.csv'"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-6c2f3182c8e1>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    , ordered_channels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
         "def main(emg_data_file, ordered_channels=None):\n",
         "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "    print(f\"Using device: {device}\")\n",
+        "    log_files = find_log_files()\n",
+        "    if not log_files:\n",
+        "        print(\"No log files found. Generating synthetic data instead.\")\n",
+        "        # Generate synthetic data as a fallback\n",
+        "        emg_data = np.random.randn(9, 5000) * 0.1\n",
+        "        joint_angles = np.random.randn(3, 5000) * 10\n",
+        "    else:\n",
+        "        print(f\"Found {len(log_files)} log files: {log_files}\")\n",
+        "        # Load data from log files\n",
+        "        emg_data, joint_angles = load_txt_files(log_files)\n",
         "\n",
         "    train_emg, train_labels, valid_emg, valid_labels, test_emg, test_labels = prepare_dataset(\n",
-        "        emg_data_file, ordered_channels\n",
+        "        , ordered_channels\n",
         "    )\n",
-        "\n",
         "    input_channels = train_emg.shape[1]\n",
         "    seq_length = train_emg.shape[2]\n",
         "\n",
@@ -756,19 +739,7 @@
         "    torch.save(trained_cnn.state_dict(), 'cnn_boundary_model.pth')\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    emg_data_file = \"emg_gait_data.csv\"\n",
-        "    ordered_channels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
-        "    trained_cnn = main(emg_data_file, ordered_channels)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "4a70312e",
-      "metadata": {
-        "id": "4a70312e"
-      },
-      "source": [
-        "Define main function to batch the preprocessed data, and define an object of the CNN followed by its training and evaluation. Execute main function."
+        "    trained_cnn = main()"
       ]
     }
   ],
