--- a/CNN_PINN.ipynb
+++ b/CNN_PINN.ipynb
@@ -291,7 +291,7 @@
       "outputs": [],
       "source": [
         "def prepare_dataset(file_path, ordered_channels, test_size=0.25):\n",
-        "    emg_data, labels = load_siat_llmd(file_path)\n",
+        "    emg_data, labels = load_txt_files(file_paths)\n",
         "\n",
         "    if ordered_channels:\n",
         "        emg_data = channel_rearrangement(emg_data, ordered_channels)\n",
@@ -740,6 +740,48 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    trained_cnn = main()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "log_files = [f for f in os.listdir() if f.endswith('.log')]\n",
+        "print(f\"Found {len(log_files)} log files: {log_files}\")\n",
+        "\n",
+        "# Now you can pass this list to your function\n",
+        "emg_data, joint_angles = load_txt_files(log_files)"
+      ],
+      "metadata": {
+        "id": "pIudq-SZyZsP",
+        "outputId": "ca307d57-a132-400d-f5b4-0ffcb05a60d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 315
+        }
+      },
+      "id": "pIudq-SZyZsP",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 0 log files: []\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "No data could be loaded from the provided files",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-43-68656011cd59>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Now you can pass this list to your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoint_angles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_txt_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-40-7000a0ed3b7e>\u001b[0m in \u001b[0;36mload_txt_files\u001b[0;34m(file_paths)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0memg_data_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No data could be loaded from the provided files\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# Concatenate data from all files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: No data could be loaded from the provided files"
+          ]
+        }
       ]
     }
   ],
