--- a/CNN_PINN.ipynb
+++ b/CNN_PINN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "de805878",
       "metadata": {
         "id": "de805878"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 44,
       "id": "4612e727",
       "metadata": {
         "id": "4612e727"
@@ -109,6 +109,22 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def load_txt_files_from_dir(directory='/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'):\n",
+        "\n",
+        "    log_files = [os.path.join(directory, f) for f in os.listdir(directory)\n",
+        "                 if f.endswith('.log')]\n",
+        "    return load_txt_files(log_files)"
+      ],
+      "metadata": {
+        "id": "3FDDM9Pz17SE"
+      },
+      "id": "3FDDM9Pz17SE",
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "e7db4a6f",
       "metadata": {
@@ -123,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "8cacd56f",
       "metadata": {
         "id": "8cacd56f"
@@ -244,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 45,
       "id": "c8f9925c",
       "metadata": {
         "id": "c8f9925c"
@@ -283,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 46,
       "id": "7dfa01c7",
       "metadata": {
         "id": "7dfa01c7"
@@ -365,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "767202ee",
       "metadata": {
         "id": "767202ee"
@@ -433,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "8214a331",
       "metadata": {
         "id": "8214a331"
@@ -474,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "68b0a1b1",
       "metadata": {
         "id": "68b0a1b1"
@@ -577,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "8d658f58",
       "metadata": {
         "id": "8d658f58"
@@ -669,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 47,
       "id": "cff62d58",
       "metadata": {
         "colab": {
@@ -677,15 +693,15 @@
           "height": 106
         },
         "id": "cff62d58",
-        "outputId": "ee261d87-80f4-45c7-cee3-866015fa2c56"
+        "outputId": "73accc25-1a8b-4ffb-f81c-a572491e3c21"
       },
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-42-6c2f3182c8e1>, line 15)",
+          "evalue": "invalid syntax (<ipython-input-47-c3ff3c05864c>, line 15)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-6c2f3182c8e1>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    , ordered_channels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-c3ff3c05864c>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    , ordered_channels\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
@@ -745,41 +761,130 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "log_files = [f for f in os.listdir() if f.endswith('.log')]\n",
-        "print(f\"Found {len(log_files)} log files: {log_files}\")\n",
+        "def main():\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    print(f\"Using device: {device}\")\n",
         "\n",
-        "# Now you can pass this list to your function\n",
-        "emg_data, joint_angles = load_txt_files(log_files)"
+        "    # Generate synthetic data instead of loading real data\n",
+        "    #data_file = generate_synthetic_data()\n",
+        "\n",
+        "    # Load the data\n",
+        "    emg_data, joint_angles = load_txt_files_from_dir()\n",
+        "\n",
+        "    # Apply preprocessing to EMG data\n",
+        "    filtered_emg = bandpass_filter(emg_data, [20, 450], 125)\n",
+        "    notched_emg = notch_filter(filtered_emg, [50, 60], 30, 125)\n",
+        "    rectified_emg = rectify(notched_emg)\n",
+        "    clean_emg = fft_analysis_and_filter(rectified_emg, 125, [0.5, 2.5])\n",
+        "\n",
+        "    # Split the data into train, validation, and test sets\n",
+        "    # Transpose to get (samples, channels) format for sklearn\n",
+        "    X = clean_emg.T\n",
+        "    y = joint_angles.T\n",
+        "\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "    X_val, X_test, y_val, y_test = train_test_split(X_test, y_test, test_size=0.5, random_state=42)\n",
+        "\n",
+        "    # Segment the data\n",
+        "    window_size = 1.5  # seconds\n",
+        "    window_shift = 0.0175  # seconds\n",
+        "    sampling_freq = 125  # Hz\n",
+        "\n",
+        "    def segment_data(X, y, window_size, window_shift, sampling_freq):\n",
+        "        w_size = int(sampling_freq * window_size)\n",
+        "        w_shift = int(sampling_freq * window_shift)\n",
+        "\n",
+        "        X_segments = []\n",
+        "        y_segments = []\n",
+        "\n",
+        "        for i in range(0, X.shape[0] - w_size, w_shift):\n",
+        "            X_segments.append(X[i:i+w_size, :].T)  # Transpose to get (channels, time_steps)\n",
+        "            y_segments.append(y[i+w_size-1, :])  # Use the last time step's label\n",
+        "\n",
+        "        return np.array(X_segments), np.array(y_segments)\n",
+        "\n",
+        "    # Segment each dataset\n",
+        "    X_train_seg, y_train_seg = segment_data(X_train, y_train, window_size, window_shift, sampling_freq)\n",
+        "    X_val_seg, y_val_seg = segment_data(X_val, y_val, window_size, window_shift, sampling_freq)\n",
+        "    X_test_seg, y_test_seg = segment_data(X_test, y_test, window_size, window_shift, sampling_freq)\n",
+        "\n",
+        "    print(f\"Training data shape: {X_train_seg.shape}, {y_train_seg.shape}\")\n",
+        "    print(f\"Validation data shape: {X_val_seg.shape}, {y_val_seg.shape}\")\n",
+        "    print(f\"Test data shape: {X_test_seg.shape}, {y_test_seg.shape}\")\n",
+        "\n",
+        "    # Create PyTorch datasets\n",
+        "    train_dataset = EMGDataset(X_train_seg, y_train_seg)\n",
+        "    valid_dataset = EMGDataset(X_val_seg, y_val_seg)\n",
+        "    test_dataset = EMGDataset(X_test_seg, y_test_seg)\n",
+        "\n",
+        "    # Create data loaders\n",
+        "    batch_size = 32\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "    valid_loader = DataLoader(valid_dataset, batch_size=batch_size)\n",
+        "    test_loader = DataLoader(test_dataset, batch_size=batch_size)\n",
+        "\n",
+        "    # Initialize the model\n",
+        "    input_channels = X_train_seg.shape[1]  # Number of EMG channels\n",
+        "    seq_length = X_train_seg.shape[2]  # Time steps in each segment\n",
+        "\n",
+        "    cnn_model = CNNRegression(input_channels, seq_length).to(device)\n",
+        "    cnn_optimizer = optim.Adam(cnn_model.parameters(), lr=0.001)\n",
+        "\n",
+        "    # Train the model (reduced epochs for demonstration)\n",
+        "    trained_cnn = train_cnn_model(\n",
+        "        cnn_model,\n",
+        "        train_loader,\n",
+        "        valid_loader,\n",
+        "        cnn_optimizer,\n",
+        "        num_epochs=5,  # Reduced for demonstration\n",
+        "        device=device\n",
+        "    )\n",
+        "\n",
+        "    # Evaluate the model\n",
+        "    cnn_test_loss, cnn_predictions, cnn_labels = evaluate_model(\n",
+        "        trained_cnn,\n",
+        "        test_loader,\n",
+        "        device=device\n",
+        "    )\n",
+        "\n",
+        "    # Save the model\n",
+        "    torch.save(trained_cnn.state_dict(), 'cnn_boundary_model.pth')\n",
+        "    print(\"Model saved successfully!\")\n",
+        "\n",
+        "    return trained_cnn\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    trained_cnn = main()\n"
       ],
       "metadata": {
-        "id": "pIudq-SZyZsP",
-        "outputId": "ca307d57-a132-400d-f5b4-0ffcb05a60d1",
+        "id": "nVpw8k1z0hwf",
+        "outputId": "bdc4cf8e-9df5-45f3-b576-aa235e5b37d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 315
+          "height": 339
         }
       },
-      "id": "pIudq-SZyZsP",
-      "execution_count": 43,
+      "id": "nVpw8k1z0hwf",
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found 0 log files: []\n"
+            "Using device: cpu\n"
           ]
         },
         {
           "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "No data could be loaded from the provided files",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-68656011cd59>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Now you can pass this list to your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoint_angles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_txt_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-40-7000a0ed3b7e>\u001b[0m in \u001b[0;36mload_txt_files\u001b[0;34m(file_paths)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0memg_data_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No data could be loaded from the provided files\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# Concatenate data from all files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: No data could be loaded from the provided files"
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-52-cbcc65fd1f29>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m     \u001b[0mtrained_cnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-52-cbcc65fd1f29>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Load the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0memg_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoint_angles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_txt_files_from_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Apply preprocessing to EMG data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-51-c2d0ffe0a1cf>\u001b[0m in \u001b[0;36mload_txt_files_from_dir\u001b[0;34m(directory)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_txt_files_from_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Load EMG data from all .txt log files in a directory\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     log_files = [os.path.join(directory, f) for f in os.listdir(directory) \n\u001b[0m\u001b[1;32m      4\u001b[0m                  if f.endswith('.log')]\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mload_txt_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_files\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/sns3776/Downloads/.SEMG_DB1/SEMG_DB1/N_TXT'"
           ]
         }
       ]
